# blackjack

./: README.md  ayuda  pyproject.toml
docs/source/: blackjack.rst  conf.py
src/blackjack/: main.py
src/test/: test_proba.py
