[project]
name = "ej53"
version = "0.1.0"
description = "Ejercicio 53 de PIA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
lint = [
    "ruff>=0.14.7",
    "ty",
    "pytest",
    "sphinx",
    "sphinx_rtd_theme",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["ej53/src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ej53"]
